infra/mongodb/mongo-express-ingress.yaml
---
# Mongo Express IngressRoute
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: mongo-express-ingress
  namespace: db
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`mongo.tickget.kr`)
      services:
        - name: mongo-express-service
          port: 8081
  tls:
    secretName: mongo-tickget-kr-tls
